--- a/assets/styles.css
+++ b/assets/styles.css
@@ -258,6 +258,9 @@ hr {
     .subsection {
     font-size: 30px;
   }
+    #desc {
+      font-size: 14px;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -268,5 +271,10 @@ hr {
   .subsection {
     font-size: 60px;
   }
+}
+
+
+.name {
+  font-weight: bolder;
 }
 
