--- a/assets/styles.css
+++ b/assets/styles.css
@@ -172,7 +172,7 @@ hr {
   text-decoration: none;
 }
 
-.bg-blue-2 {
+.bg-blue-gradient {
   background: linear-gradient(180deg, rgba(209, 209, 209, 0) 0%, #00a8f0 100%);
 }
 
